# Red-Eye-Detection-and-Correction-in-Digital-Images

./: CMakeLists.txt  README.md  diverse.h  functii.cpp  main.cpp
